--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,11 +1,9 @@
 name: Documentation
-
 on: 
   push:
     branches:
       - master
   pull_request:
-
 jobs:
   build:
     permissions:
@@ -13,16 +11,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Set up Julia
       - uses: julia-actions/setup-julia@latest
         with:
-          version: '1.8'
+          version: "1.8"
       - name: Install system dependencies
         run: |
           sudo apt-get update
           sudo apt-get install graphviz pdf2svg
           sudo apt-get install texlive-latex-base texlive-latex-extra texlive-binaries texlive-pictures texlive-luatex
       - name: Install Julia dependencies
-        run: julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
+        run: julia --project=docs/ -e "using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()"
       - name: Build and deploy docs
         env:
           DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
