--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up Julia
-      - uses: julia-actions/setup-julia@latest
+        uses: julia-actions/setup-julia@latest
         with:
           version: "1.8"
       - name: Install system dependencies
