--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,9 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up Julia
-      - uses: julia-actions/setup-julia@latest
-      - with:
-        version: "1.8"
+        uses: julia-actions/setup-julia@latest
+        with:
+          version: "1.8"
       - name: Build package
         uses: julia-actions/julia-buildpkg@v1
       - name: Run tests
