--- a/Project.toml
+++ b/Project.toml
@@ -6,11 +6,13 @@ version = "0.3.2"
 [deps]
 Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
-StatsAPI = "82ae8749-77ed-4fe6-ae5f-f523153014b0"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 Catlab = "0.14"
-StatsAPI = "1.5"
+OrderedCollections = "1.5"
+StatsBase = "0.33"
 julia = "1.8"
