--- a/Project.toml
+++ b/Project.toml
@@ -15,5 +15,5 @@ UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 [compat]
 Catlab = "0.14"
 OrderedCollections = "1.5"
-StatsBase = "0.33"
+StatsBase = "0.33, 0.34"
 julia = "1.8"
