--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,9 @@ authors = ["Richard Samuelson"]
 version = "0.5.1"
 
 [deps]
+AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
 Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
+JunctionTrees = "b732b382-80b5-46a8-aa9c-7d077ae04823"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
