--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,8 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
 [compat]
+AbstractTrees = "0.4"
 Catlab = "0.14"
+JunctionTrees = "0.4"
 StatsBase = "0.33, 0.34"
 julia = "1.8"
