--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,14 @@
 name = "AlgebraicInference"
 uuid = "0f243b7c-5df9-4f7c-98ce-987ef7223a7f"
 authors = ["Richard Samuelson"]
-version = "0.6"
+version = "0.6.0"
 
 [deps]
 AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
 Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
 JunctionTrees = "b732b382-80b5-46a8-aa9c-7d077ae04823"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
