--- a/Project.toml
+++ b/Project.toml
@@ -17,5 +17,7 @@ UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 [compat]
 AbstractTrees = "0.4"
 Catlab = "0.14"
+Graphs = "1.8"
+MetaGraphsNext = "0.5"
 StatsBase = "0.33, 0.34"
 julia = "1.8"
