--- a/Project.toml
+++ b/Project.toml
@@ -14,12 +14,13 @@ MetaGraphsNext = "fa8bd995-216d-47f1-8a91-f3b68fbeb377"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
 [compat]
 AbstractTrees = "0.4"
 Catlab = "0.14"
+CommonSolve = "0.2"
 Graphs = "1.8"
+LinearSolve = "2.1"
 MetaGraphsNext = "0.5"
 StatsBase = "0.33, 0.34"
 julia = "1.9"
