--- a/Project.toml
+++ b/Project.toml
@@ -18,8 +18,9 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 AbstractTrees = "0.4"
-Catlab = "0.14"
+Catlab = "0.15"
 CommonSolve = "0.2"
+FillArrays = "1.1"
 Graphs = "1.8"
 LinearSolve = "2.1"
 MetaGraphsNext = "0.5"
