Updated api, compat.

--- a/Project.toml
+++ b/Project.toml
@@ -19,7 +19,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 AbstractTrees = "0.4"
 Catlab = "0.15"
 CommonSolve = "0.2"
-FillArrays = "1.1"
+FillArrays = "1.1, 1.2"
 Graphs = "1.8"
 LinearSolve = "2.1"
 StatsBase = "0.33, 0.34"
