--- a/Project.toml
+++ b/Project.toml
@@ -23,5 +23,6 @@ CommonSolve = "0.2"
 FillArrays = "1.1, 1.2"
 Graphs = "1.8"
 LinearSolve = "2.2"
+OrderedCollections = "1.6"
 StatsBase = "0.33, 0.34"
 julia = "1.9"
