--- a/Project.toml
+++ b/Project.toml
@@ -5,8 +5,10 @@ version = "0.13.1"
 
 [deps]
 AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
+BayesNets = "ba4760a4-c768-5bed-964b-cf806dc591cb"
 Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
 CommonSolve = "38540f10-b2f7-11e9-35d8-d573e4eb0ff2"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
