--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+BayesNets = "ba4760a4-c768-5bed-964b-cf806dc591cb"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
