--- a/Project.toml
+++ b/Project.toml
@@ -24,9 +24,9 @@ BayesNets = "3.4"
 Catlab = "0.15"
 CommonSolve = "0.2"
 Distributions = "0.25"
-FillArrays = "1.1, 1.2, 1.3"
+FillArrays = "1.1, 1.2, 1.3, 1.4"
 Graphs = "1.8"
-LinearSolve = "2.2, 2.3"
+LinearSolve = "2.2, 2.3, 2.4"
 OrderedCollections = "1.6"
 StatsBase = "0.33, 0.34"
 julia = "1.9"
