--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,6 @@ FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
-OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
@@ -24,9 +23,8 @@ BayesNets = "3.4"
 Catlab = "0.15"
 CommonSolve = "0.2"
 Distributions = "0.25"
-FillArrays = "1.1, 1.2, 1.3, 1.4"
+FillArrays = "1.1, 1.2, 1.3, 1.4, 1.5, 1.6"
 Graphs = "1.8"
-LinearSolve = "2.2, 2.3, 2.4"
-OrderedCollections = "1.6"
+LinearSolve = "2.2, 2.3, 2.4, 2.5"
 StatsBase = "0.33, 0.34"
 julia = "1.9"
