--- a/Project.toml
+++ b/Project.toml
@@ -1,30 +1,36 @@
 name = "AlgebraicInference"
 uuid = "0f243b7c-5df9-4f7c-98ce-987ef7223a7f"
 authors = ["Richard Samuelson"]
-version = "0.16"
+version = "0.16.0"
 
 [deps]
+AMD = "14f7f29c-3bd6-536c-9a0b-7339e30b5a3e"
 AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
 BayesNets = "ba4760a4-c768-5bed-964b-cf806dc591cb"
 Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
 CommonSolve = "38540f10-b2f7-11e9-35d8-d573e4eb0ff2"
+CuthillMcKee = "17f17636-5e38-52e3-a803-7ae3aaaf3da9"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
+Metis = "2679e427-3c69-5b7f-982b-ece356f1e94b"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 AbstractTrees = "0.4"
+AMD = "0.5"
 BayesNets = "3.4"
 Catlab = "0.15"
 CommonSolve = "0.2"
+CuthillMcKee = "0.1"
 Distributions = "0.25"
 FillArrays = "1.1, 1.2, 1.3, 1.4, 1.5, 1.6"
 Graphs = "1.8"
 LinearSolve = "2.2, 2.3, 2.4, 2.5"
+Metis = "1.4"
 StatsBase = "0.33, 0.34"
 julia = "1.9"
