--- a/Project.toml
+++ b/Project.toml
@@ -16,13 +16,14 @@ Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
 Metis = "2679e427-3c69-5b7f-982b-ece356f1e94b"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-AbstractTrees = "0.4"
 AMD = "0.5"
+AbstractTrees = "0.4"
 BayesNets = "3.4"
 Catlab = "0.15"
 CommonSolve = "0.2"
