--- a/Project.toml
+++ b/Project.toml
@@ -24,14 +24,14 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 [compat]
 AMD = "0.5"
 AbstractTrees = "0.4"
-BayesNets = "3.4"
+BayesNets = "3"
 Catlab = "0.15"
 CommonSolve = "0.2"
 CuthillMcKee = "0.1"
 Distributions = "0.25"
-FillArrays = "1.1, 1.2, 1.3, 1.4, 1.5, 1.6"
-Graphs = "1.8"
-LinearSolve = "2.2, 2.3, 2.4, 2.5"
-Metis = "1.4"
+FillArrays = "1"
+Graphs = "1"
+LinearSolve = "2"
+Metis = "1"
 StatsBase = "0.33, 0.34"
 julia = "1.9"
